<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4e9fd1"
    tools:context="com.example.yaswanththaluri.billtable.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="13dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/set_owner_name"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/icon_setttings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/settings"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="Welcome to Trade Biller"
                android:textColor="#ffffff"
                android:textSize="30sp"
                />

            <TextClock
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/time"
                android:format12Hour="hh:mm:ss a"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="34sp"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeOptions"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/billing_icon"
                    />

                <TextView
                    style="@style/HomeOptions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/analysis_icon"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/HomeOptions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/accounts_icon"
                    android:id="@+id/accounts"/>

                <TextView
                    style="@style/HomeOptions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/stock"
                    android:text="@string/stock_icon" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="@string/credits"
                android:textColor="#111111"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
